// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price> inject <Text> properties 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 18,
        },
        false,
        Object {},
      ]
    }
  >
    6.995,12
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 18,
        },
        false,
        Object {
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    eur
  </Text>
</View>
`;

exports[`<Price> renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    0
  </Text>
</View>
`;

exports[`<Price> when {fixed} (0) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    6.995
  </Text>
</View>
`;

exports[`<Price> when {fixed} (4) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    6.995,1235
  </Text>
</View>
`;

exports[`<Price> when {locale} (es-ES) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    6.995,12
  </Text>
</View>
`;

exports[`<Price> when {style} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {
          "color": "green",
          "fontSize": 32,
          "fontWeight": "800",
        },
      ]
    }
  >
    6.995,12
  </Text>
</View>
`;

exports[`<Price> when {symbol} (left) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    $
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    6.995,12
  </Text>
</View>
`;

exports[`<Price> when {symbol} (right) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    6.995,12
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    eur
  </Text>
</View>
`;

exports[`<Price> when {title} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    from
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    6.995,12
  </Text>
</View>
`;

exports[`<Price> when {value} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    6.995,12
  </Text>
</View>
`;
